 - Refactoring and optimization of scanning and formatting functions.
 - Refactoring of stopwatch/wallclock functions. The --enable-clock
and --enable-monotonic configure switches have been removed.
tain_now() can now be set at run time to use a wall clock (default,
or via tain_now_set_wallclock()) or a stopwatch (via
tain_now_set_stopwatch()), instead of it being fixed at build time.


In 2.8.1.0
----------

 - Added skalibs_regcomp(), accepting empty regexes on BSDs.


In 2.8.0.1
----------

 - Bugfixes.
 - Better reporting in utc_from_tai() and localtm_from_*()


In 2.8.0.0
----------

 - Bugfixes.
 - avltreeb removed. (It used VLAs inside of structures, which is
GNU C, not C99.) The AVLTREEN_DECLARE_AND_INIT() macro should be
used instead.
 - New functions: env_dump(), mk?temp(), autosurf(), autosurf_name()
 - mkdir_unique() removed. (Duplicate functionality with mkdtemp.)
 - ancilautoclose and nbwaitall sysdeps removed.
 - New header: skalibs/posixishard.h
 - Static libraries are now PIC by default.


In 2.7.0.0
----------

 - Bugfixes.
 - New functions: ipc_timed_sendv(), unlink_void(), genset_deepfree(),
gensetdyn_deepfree(), skagetln_loose(), skagetlnsep_loose()
 - dir_close() now returns void and leaves errno unchanged
 - absolutepath(), sarealpath_tmp(), avl*_deletnode(), mininetstring, prot functions removed
 - djbunix.h doesn't include env.h anymore


In 2.6.4.0
----------

 - Bugfixes.
 - New functions: execvep_loose(), byte_zzero(), openb_read(), sig0_scan()
 - New function family: skalibs/genqdyn.h


In 2.6.3.1
----------

 - Bugfixes.


In 2.6.3.0
----------

 - New dir_fd function wrapping dirfd() (Solaris doesn't have dirfd())
 - memmem implementation for platforms that don't provide it.
 - memmem wrappers: byte_search, siovec_search.
 - New functions: atomic_symlink, skagetlnmaxsep, child_spawn3
 - New header: skalibs/posixplz.h, some header reorganization.
 - New family of functions: textmessage and textclient